--- a/index.html
+++ b/index.html
@@ -6,28 +6,14 @@
   <title>LINE 預約</title>
 
   <style>
-    /* =========================
-       0) 全域設定：一頁 App 版面
-       ========================= */
-    :root{
-      /* ✅ 你要「一頁搞定」：用這個控制整體大小（1.0 正常、0.95 更緊、1.05 更大） */
-      --ui: 1.00;
-
-      /* ✅ 卡片圓角、間距 */
-      --radius: calc(18px * var(--ui));
-      --gap: calc(10px * var(--ui));
-
-      /* ✅ 字體（會依螢幕自動縮放，不用 zoom） */
-      --h1: clamp(18px, 2.4vh, 22px);
-      --h2: clamp(16px, 2.1vh, 20px);
-      --p:  clamp(13px, 1.8vh, 16px);
-      --label: clamp(13px, 1.8vh, 16px);
-      --input: clamp(14px, 2.0vh, 17px);
-
-      /* ✅ 按鈕高度/字體（確保夠大） */
-      --btnH: clamp(52px, 7vh, 64px);
-      --btnFont: clamp(16px, 2.1vh, 18px);
+    :root {
+      --ui: 1;
+      --gap: 14px;
+      --radius: 18px;
+      --green: #06c755;
     }
+
+    * { box-sizing: border-box; }
 
     html, body {
       margin: 0;
@@ -36,310 +22,282 @@
       font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans TC", Arial;
     }
 
-    /* ✅ 外框：上面內容 + 底部固定按鈕 */
-    .app{
-      height: 100vh; /* 讓它吃滿手機畫面 */
+    .app {
+      height: 100vh;
       display: flex;
       flex-direction: column;
     }
 
-    /* ✅ 內容區：盡量「不滑」；若真的小螢幕才會微滑 */
-    .content{
+    .content {
       flex: 1;
-      padding: calc(12px * var(--ui));
-      box-sizing: border-box;
-      overflow: auto;                 /* 真的塞不下才滑 */
-      -webkit-overflow-scrolling: touch;
+      overflow-y: auto;
+      padding: 16px;
     }
 
-    /* =========================
-       1) 卡片樣式
-       ========================= */
-    .card{
+    .card {
       background: #fff;
       border-radius: var(--radius);
-      padding: calc(14px * var(--ui));
+      padding: 16px;
+      margin-bottom: 16px;
       box-shadow: 0 6px 18px rgba(0,0,0,.06);
-      margin-bottom: var(--gap);
     }
 
-    h1{
-      font-size: var(--h1);
-      margin: 0 0 8px 0;
+    h1 {
+      margin: 0 0 8px;
+      font-size: 22px;
       font-weight: 900;
     }
-    .sectionTitle{
-      font-size: var(--h2);
-      margin: 0 0 10px 0;
-      font-weight: 900;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    .muted{
-      font-size: var(--p);
+
+    .muted {
       color: #667085;
-      line-height: 1.35;
+      font-size: 14px;
     }
 
-    /* =========================
-       2) Demo 選擇（圖片高度縮短，避免往下滑）
-       ========================= */
-    .demo-grid{
+    .section {
+      font-size: 18px;
+      font-weight: 900;
+      margin-bottom: 10px;
+    }
+
+    /* Demo 選擇 */
+    .demo-grid {
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: var(--gap);
     }
-    .demo{
+
+    .demo {
       border: 2px solid #e5e7eb;
-      border-radius: calc(16px * var(--ui));
+      border-radius: var(--radius);
       overflow: hidden;
       cursor: pointer;
       background: #fff;
     }
-    .demo img{
-      width: 100%;
-      height: clamp(92px, 14vh, 120px); /* ✅ 關鍵：圖片不要太高 */
-      object-fit: cover;
-      display: block;
-      background: #eee;
-    }
-    .demo .txt{
-      padding: calc(8px * var(--ui));
-      text-align: center;
-      font-weight: 900;
-      font-size: clamp(14px, 2.0vh, 17px);
-    }
-    .demo.active{
-      border-color: #06c755;
-      box-shadow: 0 0 0 3px #06c75533;
+
+    .demo.active {
+      border-color: var(--green);
+      box-shadow: 0 0 0 3px rgba(6,199,85,.25);
     }
 
-    /* =========================
-       3) 表單（用比較緊湊版，塞進一頁）
-       ========================= */
-    label{
-      display:block;
-      margin: calc(10px * var(--ui)) 0 calc(6px * var(--ui));
-      font-size: var(--label);
+    .demo img {
+      width: 100%;
+      height: 120px;
+      object-fit: cover;
+      display: block;
+    }
+
+    .demo .txt {
+      padding: 10px;
+      text-align: center;
+      font-weight: 900;
+    }
+
+    /* 表單 */
+    label {
+      display: block;
+      margin: 12px 0 6px;
       font-weight: 800;
     }
 
-    input, select, textarea{
-      width: 100%;
-      padding: calc(12px * var(--ui));
-      border-radius: calc(14px * var(--ui));
-      border: 1px solid #e2e6ef;
-      font-size: var(--input);
-      box-sizing: border-box;
-      outline: none;
-      background: #fff;
-    }
-
-    .row{
-      display:grid;
-      grid-template-columns: 1fr clamp(110px, 26vw, 140px);
+    .row {
+      display: grid;
+      grid-template-columns: 1fr 110px;
       gap: var(--gap);
     }
 
-    /* ✅ 備註不要再撐高（避免把畫面撐爆） */
-    textarea{
-      height: clamp(70px, 12vh, 110px);
+    input, select, textarea {
+      width: 100%;
+      padding: 14px;
+      border-radius: 14px;
+      border: 1px solid #e5e7eb;
+      font-size: 16px;
+    }
+
+    textarea {
+      height: 110px;
       resize: none;
     }
 
-    /* =========================
-       4) 底部固定按鈕（一定在最下面）
-       ========================= */
-    .footer{
+    /* 底部固定送出 */
+    .footer {
       position: sticky;
       bottom: 0;
       background: #f6f7fb;
-      padding: calc(10px * var(--ui)) calc(12px * var(--ui)) calc(10px + env(safe-area-inset-bottom));
-      box-sizing: border-box;
-      border-top: 1px solid #eef0f6;
+      padding: 12px 16px calc(12px + env(safe-area-inset-bottom));
+      border-top: 1px solid #e5e7eb;
     }
 
-    .btn{
+    .btn {
       width: 100%;
-      height: var(--btnH);            /* ✅ 按鈕變大 */
-      border: 0;
-      border-radius: calc(16px * var(--ui));
-      background: #06c755;
+      height: 56px;
+      border: none;
+      border-radius: 18px;
+      background: var(--green);
       color: #fff;
-      font-size: var(--btnFont);      /* ✅ 文字也變大 */
+      font-size: 20px;
       font-weight: 900;
       cursor: pointer;
     }
 
-    .msg{
-      text-align:center;
+    .msg {
       margin-top: 8px;
-      font-size: clamp(12px, 1.6vh, 14px);
-      color: #667085;
+      text-align: center;
+      font-weight: 800;
     }
-    .msg.ok{ color:#067647; font-weight:800; }
-    .msg.err{ color:#b42318; font-weight:800; }
+
+    .ok { color: #067647; }
+    .err { color: #b42318; }
   </style>
 </head>
 
 <body>
-  <div class="app">
+<div class="app">
 
-    <!-- =========================
-         A) 上方內容區（可微滑）
-         ========================= -->
-    <div class="content">
+  <div class="content">
 
-      <div class="card">
-        <h1>預約表單</h1>
-        <div class="muted">於 LINE 內完成，不會跳外部瀏覽器</div>
-      </div>
-
-      <div class="card">
-        <div class="sectionTitle">① 選擇服務</div>
-        <div class="demo-grid" id="demoGrid"></div>
-      </div>
-
-      <div class="card">
-        <div class="sectionTitle">② 客戶資料</div>
-
-        <label>姓氏</label>
-        <div class="row">
-          <input id="lastName" placeholder="例如：陳" />
-          <select id="title">
-            <option value="">稱謂</option>
-            <option value="先生">先生</option>
-            <option value="小姐">小姐</option>
-          </select>
-        </div>
-
-        <label>聯絡電話</label>
-        <input id="phone" placeholder="0912345678" inputmode="tel" />
-
-        <label>備註（可選）</label>
-        <textarea id="note" placeholder="方便聯絡時間／需求說明…"></textarea>
-      </div>
-
+    <div class="card">
+      <h1>預約表單</h1>
+      <div class="muted">於 LINE 內完成，不會跳出瀏覽器</div>
     </div>
 
-    <!-- =========================
-         B) 底部固定按鈕（一定在最下面）
-         ========================= -->
-    <div class="footer">
-      <button class="btn" id="submitBtn">我要預約</button>
-      <div class="msg" id="msg"></div>
+    <div class="card">
+      <div class="section">① 選擇服務</div>
+      <div class="demo-grid" id="demoGrid"></div>
+    </div>
+
+    <div class="card">
+      <div class="section">② 客戶資料</div>
+
+      <label>姓氏</label>
+      <div class="row">
+        <input id="lastName" placeholder="例如：王" />
+        <select id="title">
+          <option value="">稱謂</option>
+          <option value="先生">先生</option>
+          <option value="小姐">小姐</option>
+        </select>
+      </div>
+
+      <label>聯絡電話</label>
+      <input id="phone" placeholder="0912345678" inputmode="tel" />
+
+      <label>備註（可選）</label>
+      <textarea id="note" placeholder="方便聯絡時間 / 需求說明"></textarea>
     </div>
 
   </div>
 
-  <!-- ✅ LIFF SDK -->
-  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+  <div class="footer">
+    <button class="btn" id="submitBtn">我要預約</button>
+    <div class="msg" id="msg"></div>
+  </div>
 
-  <script>
-    /* =========================
-       1) 你的設定
-       ========================= */
-    const LIFF_ID = "2008866230-0043vGnl";
-    const API_URL = "https://script.google.com/macros/s/AKfycbzXIV_n3MEPgLhWWP-tFUPaMGX6T6Cxa5vxz6aUSP37I_sX2uyYywoTz2-P-ycMVVD_/exec";
+</div>
 
-    /* =========================
-       2) Demo 資料
-       ========================= */
-    const DEMOS = [
-      { id: "Demo A", name: "Demo A", img: "https://picsum.photos/600/400?1" },
-      { id: "Demo B", name: "Demo B", img: "https://picsum.photos/600/400?2" }
-    ];
+<!-- LIFF SDK -->
+<script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 
-    let selectedDemo = "";
+<script>
+/* ======================
+   你的設定（一定要確認）
+====================== */
+const LIFF_ID = "2008866230-0043vGnl"; 
+const API_URL = "https://script.google.com/macros/s/AKfycbzXIV_n3MEPgLhWWP-tFUPaMGX6TCxa5vxz6aUSP37l_sX2uyYwoTz2-P-ycMVD_/exec";
 
-    function renderDemos() {
-      const grid = document.getElementById("demoGrid");
-      grid.innerHTML = "";
+/* Demo 資料 */
+const DEMOS = [
+  { id: "Demo A", name: "Demo A", img: "https://picsum.photos/600/400?1" },
+  { id: "Demo B", name: "Demo B", img: "https://picsum.photos/600/400?2" }
+];
 
-      DEMOS.forEach((d, i) => {
-        const el = document.createElement("div");
-        el.className = "demo";
-        el.innerHTML = `
-          <img src="${d.img}" alt="">
-          <div class="txt">${d.name}</div>
-        `;
-        el.onclick = () => {
-          selectedDemo = d.id;
-          [...grid.children].forEach(x => x.classList.remove("active"));
-          el.classList.add("active");
-        };
-        grid.appendChild(el);
+let selectedDemo = "";
+let userId = "";
+let displayName = "";
 
-        if (i === 0) el.click(); // 預設選第一個
-      });
+/* Demo render */
+function renderDemos() {
+  const grid = document.getElementById("demoGrid");
+  grid.innerHTML = "";
+  DEMOS.forEach((d, i) => {
+    const el = document.createElement("div");
+    el.className = "demo";
+    el.innerHTML = `<img src="${d.img}"><div class="txt">${d.name}</div>`;
+    el.onclick = () => {
+      selectedDemo = d.id;
+      [...grid.children].forEach(x => x.classList.remove("active"));
+      el.classList.add("active");
+    };
+    grid.appendChild(el);
+    if (i === 0) el.click();
+  });
+}
+
+/* LIFF init */
+async function initLIFF() {
+  try {
+    await liff.init({ liffId: LIFF_ID });
+    if (liff.isLoggedIn()) {
+      const p = await liff.getProfile();
+      userId = p.userId;
+      displayName = p.displayName;
+    }
+  } catch (e) {
+    showMsg("LIFF 初始化失敗", true);
+  }
+}
+
+/* 訊息 */
+function showMsg(t, err=false) {
+  const m = document.getElementById("msg");
+  m.textContent = t;
+  m.className = "msg " + (err ? "err" : "ok");
+}
+
+/* 送出 */
+async function submit() {
+  const btn = document.getElementById("submitBtn");
+  btn.disabled = true;
+  showMsg("送出中…");
+
+  try {
+    const payload = {
+      demo: selectedDemo,
+      lastName: document.getElementById("lastName").value.trim(),
+      title: document.getElementById("title").value.trim(),
+      phone: document.getElementById("phone").value.trim(),
+      note: document.getElementById("note").value.trim(),
+      userId,
+      displayName
+    };
+
+    if (!payload.demo || !payload.lastName || !payload.title || !payload.phone) {
+      throw new Error("請填寫完整資料");
     }
 
-    function setMsg(text, type="") {
-      const msg = document.getElementById("msg");
-      msg.className = "msg " + (type || "");
-      msg.textContent = text;
+    const res = await fetch(API_URL, {
+      method: "POST",
+      headers: { "Content-Type": "text/plain;charset=utf-8" },
+      body: JSON.stringify(payload)
+    });
+
+    const json = await res.json();
+    if (!json.success) throw new Error(json.error || "送出失敗");
+
+    showMsg("✅ 已送出，感謝預約");
+    if (liff.isInClient()) {
+      setTimeout(() => liff.closeWindow(), 1200);
     }
 
-    async function initLiff() {
-      try {
-        await liff.init({ liffId: LIFF_ID });
-      } catch (e) {
-        setMsg("LIFF 初始化失敗：" + e, "err");
-      }
-    }
+  } catch (e) {
+    showMsg("❌ " + e.message, true);
+  } finally {
+    btn.disabled = false;
+  }
+}
 
-    async function submit() {
-      const btn = document.getElementById("submitBtn");
-      btn.disabled = true;
-      setMsg("送出中…");
-
-      try {
-        const payload = {
-          demo: selectedDemo,
-          lastName: document.getElementById("lastName").value.trim(),
-          title: document.getElementById("title").value.trim(),
-          phone: document.getElementById("phone").value.trim(),
-          note: document.getElementById("note").value.trim()
-        };
-
-        if (!payload.demo) throw new Error("請先選擇服務");
-        if (!payload.lastName) throw new Error("請填寫姓氏");
-        if (!payload.title) throw new Error("請選擇稱謂");
-        if (!payload.phone) throw new Error("請填寫電話");
-
-        const res = await fetch(API_URL, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(payload)
-        });
-
-        const text = await res.text();
-        let json = {};
-        try { json = JSON.parse(text); } catch (_) {}
-
-        if (!res.ok || !json.success) {
-          throw new Error(json.error || ("HTTP " + res.status + " / " + text));
-        }
-
-        setMsg("✅ 已送出，感謝預約", "ok");
-
-        if (liff.isInClient()) {
-          await liff.sendMessages([{ type: "text", text: "感謝您的預約，我們會盡快聯絡您。" }]);
-          liff.closeWindow();
-        }
-
-      } catch (e) {
-        setMsg("❌ " + e.message, "err");
-      } finally {
-        btn.disabled = false;
-      }
-    }
-
-    renderDemos();
-    initLiff();
-    document.getElementById("submitBtn").addEventListener("click", submit);
-  </script>
-
+renderDemos();
+initLIFF();
+document.getElementById("submitBtn").onclick = submit;
+</script>
 </body>
 </html>
