--- a/index.html
+++ b/index.html
@@ -5,299 +5,343 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>LINE 預約</title>
 
+  <!-- ===== 這段：整體版面（像 App：上面滾動、底部固定按鈕）===== -->
   <style>
-    :root {
-      --ui: 1;
-      --gap: 14px;
-      --radius: 18px;
-      --green: #06c755;
+    :root{
+      --bg:#f6f7fb;
+      --card:#fff;
+      --text:#111;
+      --muted:#667085;
+      --brand:#06c755; /* LINE 綠 */
+      --border:#e7e9f0;
+      --radius:20px;
+      --gap:14px;
+
+      /* 這段：整體字體/元件尺寸（想放大縮小就改這個） */
+      --ui: 1.00; /* 1.00 正常；1.10 更大；0.95 更小 */
     }
 
-    * { box-sizing: border-box; }
+    *{ box-sizing:border-box; }
+    html,body{ height:100%; margin:0; background:var(--bg); color:var(--text);
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans TC", Arial; }
 
-    html, body {
-      margin: 0;
-      height: 100%;
-      background: #f6f7fb;
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans TC", Arial;
+    /* 這段：置中寬度（手機滿版、電腦不會太寬） */
+    .shell{
+      height:100vh;
+      display:flex;
+      justify-content:center;
+    }
+    .app{
+      width:100%;
+      max-width:540px;      /* 電腦版可看清楚 */
+      height:100vh;
+      display:flex;
+      flex-direction:column;
     }
 
-    .app {
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
+    /* 這段：上半部可滾動內容 */
+    .content{
+      flex:1;
+      overflow:auto;
+      padding:calc(14px * var(--ui));
+      padding-bottom:calc(110px * var(--ui)); /* 給底部按鈕留空間，避免被蓋住 */
+      -webkit-overflow-scrolling:touch;
     }
 
-    .content {
-      flex: 1;
-      overflow-y: auto;
-      padding: 16px;
+    /* 這段：卡片樣式 */
+    .card{
+      background:var(--card);
+      border-radius:calc(var(--radius) * var(--ui));
+      box-shadow:0 10px 24px rgba(0,0,0,.06);
+      padding:calc(16px * var(--ui));
+      margin-bottom:calc(var(--gap) * var(--ui));
     }
 
-    .card {
-      background: #fff;
-      border-radius: var(--radius);
-      padding: 16px;
-      margin-bottom: 16px;
-      box-shadow: 0 6px 18px rgba(0,0,0,.06);
+    /* 這段：文字大小（整體等比例） */
+    h1{
+      margin:0 0 calc(8px * var(--ui)) 0;
+      font-size:clamp(20px, 2.3vh, 28px);
+      font-weight:900;
+    }
+    .sectionTitle{
+      display:flex;
+      align-items:center;
+      gap:10px;
+      font-weight:900;
+      font-size:clamp(18px, 2.1vh, 24px);
+      margin:0 0 calc(10px * var(--ui)) 0;
+    }
+    .muted{
+      color:var(--muted);
+      font-size:clamp(14px, 1.8vh, 18px);
+      line-height:1.4;
     }
 
-    h1 {
-      margin: 0 0 8px;
-      font-size: 22px;
-      font-weight: 900;
-    }
-
-    .muted {
-      color: #667085;
-      font-size: 14px;
-    }
-
-    .section {
-      font-size: 18px;
-      font-weight: 900;
-      margin-bottom: 10px;
-    }
-
-    /* Demo 選擇 */
-    .demo-grid {
-      display: grid;
+    /* 這段：Demo 兩格選擇 */
+    .demo-grid{
+      display:grid;
       grid-template-columns: 1fr 1fr;
-      gap: var(--gap);
+      gap:calc(var(--gap) * var(--ui));
+    }
+    .demo{
+      border:2px solid var(--border);
+      border-radius:calc(18px * var(--ui));
+      overflow:hidden;
+      background:#fff;
+      cursor:pointer;
+      user-select:none;
+      transition:.15s transform ease, .15s border-color ease;
+    }
+    .demo:active{ transform:scale(.99); }
+    .demo.active{
+      border-color:var(--brand);
+      box-shadow:0 0 0 3px rgba(6,199,85,.18);
+    }
+    .demo img{
+      width:100%;
+      height:clamp(110px, 16vh, 150px); /* 圖片不會太高 */
+      object-fit:cover;
+      display:block;
+      background:#eee;
+    }
+    .demo .txt{
+      text-align:center;
+      font-weight:900;
+      font-size:clamp(16px, 2.1vh, 20px);
+      padding:calc(10px * var(--ui));
     }
 
-    .demo {
-      border: 2px solid #e5e7eb;
-      border-radius: var(--radius);
-      overflow: hidden;
-      cursor: pointer;
-      background: #fff;
+    /* 這段：表單 */
+    label{
+      display:block;
+      margin:calc(12px * var(--ui)) 0 calc(6px * var(--ui));
+      font-weight:800;
+      font-size:clamp(15px, 1.9vh, 18px);
+    }
+    input, select, textarea{
+      width:100%;
+      padding:calc(14px * var(--ui));
+      border-radius:calc(16px * var(--ui));
+      border:1px solid var(--border);
+      font-size:clamp(16px, 2.0vh, 18px);
+      outline:none;
+      background:#fff;
+    }
+    textarea{
+      height:clamp(80px, 12vh, 120px); /* 備註不會爆大 */
+      resize:none;
+    }
+    .row{
+      display:grid;
+      grid-template-columns: 1fr clamp(120px, 28vw, 160px);
+      gap:calc(var(--gap) * var(--ui));
+      align-items:center;
     }
 
-    .demo.active {
-      border-color: var(--green);
-      box-shadow: 0 0 0 3px rgba(6,199,85,.25);
+    /* 這段：底部固定送出區（按鈕永遠在最下面） */
+    .footer{
+      position:sticky;
+      bottom:0;
+      background:rgba(246,247,251,.92);
+      backdrop-filter: blur(10px);
+      padding:calc(12px * var(--ui));
+      padding-bottom:calc(12px * var(--ui) + env(safe-area-inset-bottom));
+      border-top:1px solid var(--border);
     }
-
-    .demo img {
-      width: 100%;
-      height: 120px;
-      object-fit: cover;
-      display: block;
+    .btn{
+      width:100%;
+      height:clamp(56px, 7vh, 72px);
+      border:none;
+      border-radius:calc(20px * var(--ui));
+      background:var(--brand);
+      color:#fff;
+      font-weight:900;
+      font-size:clamp(18px, 2.2vh, 24px); /* 你說要變大：這裡一定大 */
+      cursor:pointer;
     }
-
-    .demo .txt {
-      padding: 10px;
-      text-align: center;
-      font-weight: 900;
+    .btn:disabled{ opacity:.6; cursor:not-allowed; }
+    .msg{
+      text-align:center;
+      margin-top:10px;
+      font-weight:800;
+      font-size:clamp(14px, 1.7vh, 16px);
     }
-
-    /* 表單 */
-    label {
-      display: block;
-      margin: 12px 0 6px;
-      font-weight: 800;
-    }
-
-    .row {
-      display: grid;
-      grid-template-columns: 1fr 110px;
-      gap: var(--gap);
-    }
-
-    input, select, textarea {
-      width: 100%;
-      padding: 14px;
-      border-radius: 14px;
-      border: 1px solid #e5e7eb;
-      font-size: 16px;
-    }
-
-    textarea {
-      height: 110px;
-      resize: none;
-    }
-
-    /* 底部固定送出 */
-    .footer {
-      position: sticky;
-      bottom: 0;
-      background: #f6f7fb;
-      padding: 12px 16px calc(12px + env(safe-area-inset-bottom));
-      border-top: 1px solid #e5e7eb;
-    }
-
-    .btn {
-      width: 100%;
-      height: 56px;
-      border: none;
-      border-radius: 18px;
-      background: var(--green);
-      color: #fff;
-      font-size: 20px;
-      font-weight: 900;
-      cursor: pointer;
-    }
-
-    .msg {
-      margin-top: 8px;
-      text-align: center;
-      font-weight: 800;
-    }
-
-    .ok { color: #067647; }
-    .err { color: #b42318; }
+    .ok{ color:#0a7a3a; }
+    .err{ color:#b42318; }
   </style>
 </head>
 
 <body>
-<div class="app">
+  <div class="shell">
+    <div class="app">
+      <!-- ===== 這段：上面內容（可滑動）===== -->
+      <div class="content">
 
-  <div class="content">
+        <div class="card">
+          <h1>預約表單</h1>
+          <div class="muted">於 LINE 內完成，不會跳外部瀏覽器</div>
+        </div>
 
-    <div class="card">
-      <h1>預約表單</h1>
-      <div class="muted">於 LINE 內完成，不會跳出瀏覽器</div>
-    </div>
+        <div class="card">
+          <div class="sectionTitle">① 選擇服務</div>
+          <div class="demo-grid" id="demoGrid"></div>
+          <div class="muted" style="margin-top:10px;">（之後可換成你的實際服務項目／圖片）</div>
+        </div>
 
-    <div class="card">
-      <div class="section">① 選擇服務</div>
-      <div class="demo-grid" id="demoGrid"></div>
-    </div>
+        <div class="card">
+          <div class="sectionTitle">② 客戶資料</div>
 
-    <div class="card">
-      <div class="section">② 客戶資料</div>
+          <label>姓氏</label>
+          <div class="row">
+            <input id="lastName" placeholder="例如：陳" />
+            <select id="title">
+              <option value="">稱謂</option>
+              <option value="先生">先生</option>
+              <option value="小姐">小姐</option>
+            </select>
+          </div>
 
-      <label>姓氏</label>
-      <div class="row">
-        <input id="lastName" placeholder="例如：王" />
-        <select id="title">
-          <option value="">稱謂</option>
-          <option value="先生">先生</option>
-          <option value="小姐">小姐</option>
-        </select>
+          <label>聯絡電話</label>
+          <input id="phone" placeholder="0912345678" inputmode="tel" />
+
+          <label>備註（可選）</label>
+          <textarea id="note" placeholder="方便聯絡時間 / 需求說明…"></textarea>
+        </div>
+
       </div>
 
-      <label>聯絡電話</label>
-      <input id="phone" placeholder="0912345678" inputmode="tel" />
-
-      <label>備註（可選）</label>
-      <textarea id="note" placeholder="方便聯絡時間 / 需求說明"></textarea>
+      <!-- ===== 這段：底部固定按鈕（永遠在最下面）===== -->
+      <div class="footer">
+        <button class="btn" id="submitBtn">我要預約</button>
+        <div class="msg" id="msg"></div>
+      </div>
     </div>
-
   </div>
 
-  <div class="footer">
-    <button class="btn" id="submitBtn">我要預約</button>
-    <div class="msg" id="msg"></div>
-  </div>
+  <!-- ===== 這段：LINE LIFF SDK（用來拿 userId / displayName）===== -->
+  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 
-</div>
+  <!-- ===== 這段：主程式（渲染服務、初始化 LIFF、送出到 GAS）===== -->
+  <script>
+    // ✅ 你只要改這兩個
+    const LIFF_ID = "2008866230-o043vGnI"; // ← 換成你的 LIFF ID
+    const API_URL = "https://script.google.com/macros/s/AKfycbzXIV_n3MEPgLhWWP-tFUPaMGX6T6Cxa5vxz6aUSP37I_sX2uyYywoTz2-P-ycMVVD_/exec"; // ← 換成你的 GAS /exec
 
-<!-- LIFF SDK -->
-<script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+    // 這段：示範服務（先用假圖）
+    const DEMOS = [
+      { id:"Demo A", name:"Demo A", img:"https://picsum.photos/600/400?1" },
+      { id:"Demo B", name:"Demo B", img:"https://picsum.photos/600/400?2" },
+    ];
 
-<script>
-/* ======================
-   你的設定（一定要確認）
-====================== */
-const LIFF_ID = "2008866230-0043vGnl"; 
-const API_URL = "https://script.google.com/macros/s/AKfycbzXIV_n3MEPgLhWWP-tFUPaMGX6TCxa5vxz6aUSP37l_sX2uyYwoTz2-P-ycMVD_/exec";
+    let selectedDemo = "";
+    let userId = "";
+    let displayName = "";
 
-/* Demo 資料 */
-const DEMOS = [
-  { id: "Demo A", name: "Demo A", img: "https://picsum.photos/600/400?1" },
-  { id: "Demo B", name: "Demo B", img: "https://picsum.photos/600/400?2" }
-];
+    // 這段：畫出兩張服務卡
+    function renderDemos(){
+      const grid = document.getElementById("demoGrid");
+      grid.innerHTML = "";
 
-let selectedDemo = "";
-let userId = "";
-let displayName = "";
+      DEMOS.forEach((d, i) => {
+        const el = document.createElement("div");
+        el.className = "demo";
+        el.innerHTML = `
+          <img src="${d.img}" alt="">
+          <div class="txt">${d.name}</div>
+        `;
+        el.onclick = () => {
+          selectedDemo = d.id;
+          [...grid.children].forEach(x => x.classList.remove("active"));
+          el.classList.add("active");
+        };
+        grid.appendChild(el);
 
-/* Demo render */
-function renderDemos() {
-  const grid = document.getElementById("demoGrid");
-  grid.innerHTML = "";
-  DEMOS.forEach((d, i) => {
-    const el = document.createElement("div");
-    el.className = "demo";
-    el.innerHTML = `<img src="${d.img}"><div class="txt">${d.name}</div>`;
-    el.onclick = () => {
-      selectedDemo = d.id;
-      [...grid.children].forEach(x => x.classList.remove("active"));
-      el.classList.add("active");
-    };
-    grid.appendChild(el);
-    if (i === 0) el.click();
-  });
-}
-
-/* LIFF init */
-async function initLIFF() {
-  try {
-    await liff.init({ liffId: LIFF_ID });
-    if (liff.isLoggedIn()) {
-      const p = await liff.getProfile();
-      userId = p.userId;
-      displayName = p.displayName;
-    }
-  } catch (e) {
-    showMsg("LIFF 初始化失敗", true);
-  }
-}
-
-/* 訊息 */
-function showMsg(t, err=false) {
-  const m = document.getElementById("msg");
-  m.textContent = t;
-  m.className = "msg " + (err ? "err" : "ok");
-}
-
-/* 送出 */
-async function submit() {
-  const btn = document.getElementById("submitBtn");
-  btn.disabled = true;
-  showMsg("送出中…");
-
-  try {
-    const payload = {
-      demo: selectedDemo,
-      lastName: document.getElementById("lastName").value.trim(),
-      title: document.getElementById("title").value.trim(),
-      phone: document.getElementById("phone").value.trim(),
-      note: document.getElementById("note").value.trim(),
-      userId,
-      displayName
-    };
-
-    if (!payload.demo || !payload.lastName || !payload.title || !payload.phone) {
-      throw new Error("請填寫完整資料");
+        if(i === 0) el.click(); // 預設選第一個
+      });
     }
 
-    const res = await fetch(API_URL, {
-      method: "POST",
-      headers: { "Content-Type": "text/plain;charset=utf-8" },
-      body: JSON.stringify(payload)
-    });
-
-    const json = await res.json();
-    if (!json.success) throw new Error(json.error || "送出失敗");
-
-    showMsg("✅ 已送出，感謝預約");
-    if (liff.isInClient()) {
-      setTimeout(() => liff.closeWindow(), 1200);
+    // 這段：顯示訊息
+    function showMsg(text, type=""){
+      const m = document.getElementById("msg");
+      m.className = "msg " + type;
+      m.textContent = text;
     }
 
-  } catch (e) {
-    showMsg("❌ " + e.message, true);
-  } finally {
-    btn.disabled = false;
-  }
-}
+    // 這段：初始化 LIFF（拿 userId / displayName）
+    async function initLIFF(){
+      try{
+        await liff.init({ liffId: LIFF_ID });
 
-renderDemos();
-initLIFF();
-document.getElementById("submitBtn").onclick = submit;
-</script>
+        if(!liff.isLoggedIn()){
+          // 外部測試時可能沒登入，讓它自動登入
+          liff.login();
+          return;
+        }
+
+        const profile = await liff.getProfile();
+        userId = profile.userId || "";
+        displayName = profile.displayName || "";
+      }catch(e){
+        showMsg("LIFF 初始化失敗：" + (e?.message || e), "err");
+      }
+    }
+
+    // 這段：送出到 GAS（重點：application/json + cors）
+    async function submit(){
+      const btn = document.getElementById("submitBtn");
+      btn.disabled = true;
+      showMsg("送出中…");
+
+      try{
+        const payload = {
+          demo: selectedDemo,
+          lastName: document.getElementById("lastName").value.trim(),
+          title: document.getElementById("title").value.trim(),
+          phone: document.getElementById("phone").value.trim(),
+          note: document.getElementById("note").value.trim(),
+          userId,
+          displayName
+        };
+
+        // 基本檢查
+        if(!payload.demo) throw new Error("請先選擇服務");
+        if(!payload.lastName) throw new Error("請填寫姓氏");
+        if(!payload.title) throw new Error("請選擇稱謂");
+        if(!payload.phone) throw new Error("請填寫電話");
+
+        const res = await fetch(API_URL, {
+          method: "POST",
+          mode: "cors",
+          redirect: "follow",
+          headers: { "Content-Type": "application/json" },  // ✅ 這行是關鍵
+          body: JSON.stringify(payload)
+        });
+
+        const text = await res.text();
+        let json = {};
+        try { json = JSON.parse(text); } catch (_) {}
+
+        if(!res.ok || !json.success){
+          throw new Error(json.error || ("HTTP " + res.status + " / " + text));
+        }
+
+        showMsg("✅ 已送出，感謝預約", "ok");
+
+        // 在 LINE 裡才幫你關窗
+        if (typeof liff !== "undefined" && liff.isInClient()) {
+          setTimeout(() => liff.closeWindow(), 1200);
+        }
+      }catch(e){
+        showMsg("❌ " + (e?.message || e), "err");
+      }finally{
+        btn.disabled = false;
+      }
+    }
+
+    // 啟動
+    renderDemos();
+    initLIFF();
+    document.getElementById("submitBtn").addEventListener("click", submit);
+  </script>
 </body>
 </html>
